# ArenaX3

./: .gitignore  gradle.properties  settings.gradle
.acside/editor/: openedFiles.json.bak
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Emulator.cpp  Emulator.hpp  native-lib.cpp  ppu_core.cpp
app/src/main/cpp/Platform_Utils/EmuCore/CPU/: ARM64_Emitter.cpp  ARM64_Emitter.hpp  PPU_Interpreter.cpp  PPU_Interpreter.hpp  SPU_Runtime.cpp  SPU_Runtime.hpp
app/src/main/cpp/Platform_Utils/EmuCore/CPU/Memory/: Memory_Manager.cpp  Memory_Manager.hpp  Virtual_Memory.hpp
app/src/main/cpp/Platform_Utils/EmuCore/Video/HLE/Modules/: sys_audio.cpp  sys_fs.cpp  sys_fs.hpp  sys_net.cpp  sys_net.hpp  sys_save.cpp
app/src/main/cpp/Platform_Utils/EmuCore/Video/Vulkan/: RSX_Vulkan.cpp  Vulkan_Device.cpp  Vulkan_Device.hpp  Vulkan_Renderer.cpp  Vulkan_Renderer.hpp  Vulkan_Swapchain.hpp
app/src/main/cpp/Platform_Utils/EmuCore/Video/Vulkan/RSX/: Shader_Translator.cpp  Shader_Translator.hpp  Texture_Cache.cpp  Texture_Cache.hpp
app/src/main/cpp/Platform_Utils/Utils/: Logger.cpp  Logger.hpp  Types.hpp
app/src/main/cpp/Platform_Utils/Utils/Audio/: Oboe_Backend.cpp  Oboe_Backend.hpp
app/src/main/cpp/Platform_Utils/Utils/Input/: Gamepad_Handler.cpp  Gamepad_Handler.hpp  Touch_Controls.cpp  Touch_Controls.hpp
app/src/main/cpp/Platform_Utils/Utils/Loader/: Elf_Loader.hpp  Self_Decryptor.cpp  Self_Decryptor.hpp
app/src/main/res/drawable/: border_background.xml  ic_about.xml  ic_chevron_right.xml  ic_firmware.xml  ic_menu.xml  (+1 more)
(+14 files in other folders)
